# learn-opengl

./: .gitmodules  CMakeLists.txt  Makefile
res/shaders/: default.frag.glsl  default.vert.glsl
src/: main.c  main.cpp
